<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/archos_info_common_details"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="11dip"
              android:paddingRight="11dip"
              android:paddingTop="4dip"
              android:paddingBottom="6dip"
              android:orientation="vertical" >

  <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
    <TextView
       style="@style/InfoDialogText.Grey"
       android:paddingRight="7dip"
       android:text="@string/file_info_label_name" />
    <TextView
       android:id="@+id/archos_info_name"
       style="@style/InfoDialogText"/>
  </LinearLayout>

  <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
    <TextView
       android:id="@+id/archos_info_size_label"
       style="@style/InfoDialogText.Grey"
       android:paddingRight="7dip"
       android:text="@string/file_info_label_size" />
    <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical" >
      <TextView
         android:id="@+id/archos_info_size"
         style="@style/InfoDialogText"/>
      <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
        <ProgressBar android:id="@+id/archos_info_progress"
                     style="?android:attr/progressBarStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="5dip"
                     android:indeterminate="true" />
        <TextView
           android:id="@+id/archos_info_number_files"
           style="@style/InfoDialogText"/>
      </LinearLayout>
    </LinearLayout>
  </LinearLayout>
  
  <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
    <TextView
       android:id="@+id/archos_info_size_label_2"
       style="@style/InfoDialogText.Grey"
       android:paddingRight="7dip"
       android:text="@string/file_info_label_size" />
    <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical" >
      <TextView
         android:id="@+id/archos_info_size_2"
         style="@style/InfoDialogText"/>
      <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
        <ProgressBar android:id="@+id/archos_info_progress_2"
                     style="?android:attr/progressBarStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="5dip"
                     android:indeterminate="true" />
        <TextView
           android:id="@+id/archos_info_number_files_2"
           style="@style/InfoDialogText"/>
      </LinearLayout>
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
    <TextView
       android:id="@+id/archos_info_permission_label"
       style="@style/InfoDialogText.Grey"
       android:paddingRight="7dip"
       android:text="@string/file_info_label_permission" />
    <TextView
       android:id="@+id/archos_info_permission"
       style="@style/InfoDialogText"/>
  </LinearLayout>

  <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
    <TextView
       android:id="@+id/archos_info_last_modified_label"
       style="@style/InfoDialogText.Grey"
       android:paddingRight="7dip"
       android:text="@string/file_info_label_last_modified" />
    <TextView
       android:id="@+id/archos_info_last_modified"
       style="@style/InfoDialogText"/>
  </LinearLayout>

  <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
    <TextView
       android:id="@+id/archos_info_mime_type_label"
       style="@style/InfoDialogText.Grey"
       android:paddingRight="7dip"
       android:text="@string/file_info_label_mime_type" />
    <TextView
       android:id="@+id/archos_info_mime_type"
       style="@style/InfoDialogText"/>
  </LinearLayout>

  <ImageView
     android:layout_width="fill_parent"
     android:layout_height="10dip"
     android:scaleType="fitXY"
     android:gravity="fill_horizontal"
     android:paddingTop="7dip"
     android:paddingBottom="2dip"
     android:src="@drawable/divider_horizontal_dark"/>

  <TextView android:id="@+id/archos_info_fullpath"
     style="@style/InfoDialogText"
     android:layout_width="fill_parent"
     android:singleLine="false"/> 

</LinearLayout>
